@@ -84,12 +84,12 @@
         <scala.library.version>2.13.16</scala.library.version>
         <avatica.version>1.28.0</avatica.version>
         <avro.version>1.12.2</avro.version>
-        <parquet.version>1.18.0</parquet.version>
-        <bytebuddy.version>1.18.12</bytebuddy.version>
+        <parquet.version>1.18.1</parquet.version>
+        <bytebuddy.version>1.18.13</bytebuddy.version>
         <!--
             The base calcite parser was copied into the project; when updating Calcite run dev/upgrade-calcite-parser to adopt upstream changes
           -->
-        <calcite.version>1.41.0</calcite.version>
+        <calcite.version>1.42.0</calcite.version>
         <confluent.version>8.3.1</confluent.version>
         <cronutils.version>9.2.1</cronutils.version>
         <datasketches.version>4.2.0</datasketches.version>
@@ -98,14 +98,14 @@
         <dropwizard.metrics.version>4.2.40</dropwizard.metrics.version>
         <errorprone.annotations.version>2.50.0</errorprone.annotations.version>
         <errorprone.version>2.50.0</errorprone.version>
-        <fabric8.version>7.8.0</fabric8.version>
+        <fabric8.version>7.9.0</fabric8.version>
         <fastutil.version>8.5.4</fastutil.version>
         <guava.version>33.7.1-jre</guava.version>
         <guice.version>6.0.0</guice.version>
         <hamcrest.version>3.0</hamcrest.version>
         <iceberg.core.version>1.11.0</iceberg.core.version>
         <arrow.version>15.0.2</arrow.version>
-        <jetty.version>12.1.12</jetty.version>
+        <jetty.version>12.1.13</jetty.version>
         <jspecify.version>1.0.1</jspecify.version>
         <jersey.version>1.19.4</jersey.version>
         <jackson.version>2.22.2</jackson.version>
@@ -116,9 +116,9 @@
         <netty3.version>3.10.6.Final</netty3.version>
         <netty4.version>4.2.17.Final</netty4.version>
         <postgresql.version>42.7.13</postgresql.version>
-        <protobuf.version>4.36.0</protobuf.version>
+        <protobuf.version>4.36.1</protobuf.version>
         <resilience4j.version>2.4.0</resilience4j.version>
-        <slf4j.version>2.0.18</slf4j.version>
+        <slf4j.version>2.0.19</slf4j.version>
         <jna.version>5.19.1</jna.version>
         <jna-platform.version>5.19.1</jna-platform.version>
         <hadoop.compile.version>3.5.0</hadoop.compile.version>
@@ -127,7 +127,7 @@
         <!-- AWS SDK v1 is still used as a transitive dependency by Hadoop and Ranger extensions.
              It should be removed once those extensions are upgraded or dropped (see #19109). -->
         <aws.sdk.v1.version>1.12.797</aws.sdk.v1.version>
-        <aws.sdk.v2.version>2.54.7</aws.sdk.v2.version>
+        <aws.sdk.v2.version>2.54.13</aws.sdk.v2.version>
         <caffeine.version>3.2.4</caffeine.version>
         <jacoco.version>0.8.15</jacoco.version>
         <testcontainers.version>2.0.5</testcontainers.version>
@@ -136,11 +136,11 @@
         <okhttp.version>5.5.0</okhttp.version>
         <kubernetes.client.version>25.0.0-legacy</kubernetes.client.version>
         <zookeeper.version>3.8.6</zookeeper.version>
-        <checkerframework.version>4.2.2</checkerframework.version>
+        <checkerframework.version>4.2.3</checkerframework.version>
         <com.google.apis.client.version>2.7.2</com.google.apis.client.version>
         <com.google.http.client.apis.version>2.2.0</com.google.http.client.apis.version>
         <com.google.apis.compute.version>v1-rev20230606-2.0.0</com.google.apis.compute.version>
-        <com.google.cloud.storage.version>2.72.0</com.google.cloud.storage.version>
+        <com.google.cloud.storage.version>2.73.0</com.google.cloud.storage.version>
         <jdk.strong.encapsulation.argLine>
             <!-- Strong encapsulation parameters -->
             <!-- When updating this list, update all four locations: -->
@@ -287,15 +287,6 @@
             <id>${repoOrgId}</id>
             <name>${repoOrgName}</name>
             <url>${repoOrgUrl}</url>
-            <snapshots>
-               <enabled>false</enabled>
-            </snapshots>
-        </repository>
-
-        <!-- Only used by core, but moved to root for parallel build dependency resolution -->
-        <repository>
-            <id>sigar</id>
-            <url>https://repository.mulesoft.org/nexus/content/repositories/public</url>
             <snapshots>
                <enabled>false</enabled>
             </snapshots>
@@ -456,6 +447,13 @@
                 <artifactId>iceberg-arrow</artifactId>
                 <version>${iceberg.core.version}</version>
             </dependency>
+            <!-- transitive dependency of calcite-core and avatica-core, which require different
+            versions; pinned to the higher of the two -->
+            <dependency>
+                <groupId>org.jooq</groupId>
+                <artifactId>joou-java-6</artifactId>
+                <version>0.9.5</version>
+            </dependency>
 
             <!-- transitive dependency of kafka-clients and kubernetes client
             this should get resolved with the update of above depdendencies -->
@@ -523,12 +521,12 @@
             <dependency>
                 <groupId>com.squareup.okio</groupId>
                 <artifactId>okio</artifactId>
-                <version>3.18.1</version>
+                <version>3.18.2</version>
             </dependency>
             <dependency>
                 <groupId>com.squareup.okio</groupId>
                 <artifactId>okio-jvm</artifactId>
-                <version>3.18.1</version>
+                <version>3.18.2</version>
             </dependency>
             <dependency>
                 <groupId>redis.clients</groupId>
@@ -1138,7 +1136,7 @@
             <dependency>
                 <groupId>net.thisptr</groupId>
                 <artifactId>jackson-jq</artifactId>
-                <version>1.6.2</version>
+                <version>1.6.4</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -1148,12 +1146,12 @@
             <dependency>
                 <groupId>org.roaringbitmap</groupId>
                 <artifactId>RoaringBitmap</artifactId>
-                <version>1.6.20</version>
+                <version>1.6.21</version>
             </dependency>
             <dependency>
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
-                <version>2.6</version>
+                <version>2.7</version>
             </dependency>
             <dependency>
                 <groupId>io.airlift</groupId>
@@ -1741,7 +1739,7 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.10.4.0</version>
+                <version>4.10.4.1</version>
                 <configuration>
                     <excludeFilterFile>codestyle/spotbugs-exclude.xml</excludeFilterFile>
                     <maxHeap>768</maxHeap>
@@ -1942,7 +1940,7 @@
             <plugin>
                 <groupId>io.github.git-commit-id</groupId>
                 <artifactId>git-commit-id-maven-plugin</artifactId>
-                <version>10.0.0</version>
+                <version>10.0.1</version>
                 <executions>
                     <execution>
                         <goals>
@@ -2061,11 +2059,12 @@
               <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.5.6</version>
+                    <version>3.6.0</version>
                     <configuration>
                         <!-- locale settings must be set on the command line before startup -->
                         <!-- set default options -->
                         <argLine>
+                            -XX:+UseCompactObjectHeaders
                             @{jacocoArgLine}
                             ${jdk.strong.encapsulation.argLine}
                             -Xmx2048m
@@ -2146,7 +2145,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
-                    <version>3.5.1</version>
+                    <version>3.6.3</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -2177,7 +2176,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.15.0</version>
+                    <version>3.16.0</version>
                     <inherited>true</inherited>
                     <configuration>
                         <release>${maven.compiler.release}</release>
@@ -2270,6 +2269,7 @@
                             <!-- locale settings must be set on the command line before startup -->
                             <!-- set heap size to work around https://github.com/travis-ci/travis-ci/issues/3396 -->
                             <argLine>
+                                -XX:+UseCompactObjectHeaders
                                 -Xmx768m -Duser.language=en -Duser.country=US -Dfile.encoding=UTF-8
                                 -XX:+ExitOnOutOfMemoryError
                                 -XX:+HeapDumpOnOutOfMemoryError
